--- a/index.html
+++ b/index.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>linktree</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    </head>
-    <body class="bg-img">
-        <div class="container content">
-            <img class="img" src="profile_recent.jpg">
-            <p class="name display-4">Annanya Pandey</p>
-            <!--<p><a class = "insta"href="https://www.instagram.com/annanya_1120/">@annanya_1120</a></p>-->
-            <!--<p class="about">I aim to work at a reputed organization so as to hone my skills and prove my worth alongside being an asset to the team.</p>-->
-        </div>
-        <!--<div class="container">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>linktree</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+</head>
+
+<body class="bg-img">
+    <div class="container content">
+        <img class="img" src="profile_recent.jpg">
+        <p class="name display-4">Annanya Pandey</p>
+        <!--<p><a class = "insta"href="https://www.instagram.com/annanya_1120/">@annanya_1120</a></p>-->
+        <!--<p class="about">I aim to work at a reputed organization so as to hone my skills and prove my worth alongside being an asset to the team.</p>-->
+    </div>
+    <!--<div class="container">
             <div class="list-group links">
                 <a href="https://www.linkedin.com/in/annanya-pandey-7a9043195/" class="list-group-item list-group-item-action text-white bg-pink link border border-white">LinkedIn <i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/Annanya481" class="list-group-item list-group-item-action text-white bg-pink link border border-white">Github <i class="fab fa-github"></i></a>
                 <a href="https://annanya.info/" class="list-group-item list-group-item-action text-white bg-pink link border border-white">My Website <i class="fas fa-globe"></i></a>
             </div>
         </div>-->
-        <div class="container">
-            <ul>
-                <br />
-                <li>
-                    <a href="https://www.linkedin.com/in/annanya-pandey-7a9043195/" target="_blank" class="linkedin button">LinkedIn <i class="fab fa-linkedin-in"></i></a>
-                </li>
-                <br />
-                <li>
-                    <a href="https://www.instagram.com/annanya_1120/" target="_blank" class="instagram button">Instagram <i class="fab fa-instagram"></i></a>
-                </li>
-                <br />
-                <li>
-                    <a href="https://github.com/Annanya481" target="_blank" class="github button">My Projects <i class="fab fa-github"></i></a>
-                </li>
-                <br />
-                <li>
-                    <a href="https://annanya.info/" target="_blank" class="resume button">All About Me! <i class="fas fa-globe"></i></a>
-                </li>
-                <br />
-                <li>
-                    <a href="https://www.goodreads.com/user/show/8395732-annanya" target="_blank" class="goodreads button">Read my views on my favourite books here! <i class="fab fa-goodreads"></i></a>
-                </li>
-                <br />
-                <li>
-                    <a href="./contactForm/contact.html" target="_blank" class="contact button">Contact Me! <i class="fas fa-file-signature"></i></a>
-                </li>
-                <br />
-            </ul>
-        </div>
-        <div class="footer">
-            <br><p class="cpright">Copyright 2020 by Annanya Pandey</p>
-        </div>
-    </body>
+    <div class="container">
+        <ul>
+            <br />
+            <li>
+                <a href="https://www.linkedin.com/in/annanya-pandey-7a9043195/" target="_blank" class="linkedin button">LinkedIn <i class="fab fa-linkedin-in"></i></a>
+            </li>
+            <br />
+            <li>
+                <a href="https://www.instagram.com/annanya_1120/" target="_blank" class="instagram button">Instagram <i class="fab fa-instagram"></i></a>
+            </li>
+            <br />
+            <li>
+                <a href="https://github.com/Annanya481" target="_blank" class="github button">My Projects <i class="fab fa-github"></i></a>
+            </li>
+            <br />
+            <li>
+                <a href="https://annanya.info/" target="_blank" class="resume button">All About Me! <i class="fas fa-globe"></i></a>
+            </li>
+            <br />
+            <li>
+                <a href="https://www.goodreads.com/user/show/8395732-annanya" target="_blank" class="goodreads button">Read my views on my favourite books here! <i class="fab fa-goodreads"></i></a>
+            </li>
+            <br />
+            <li>
+                <a href="./contactForm/contact.html" target="_blank" class="contact button">Contact Me! <i class="fas fa-file-signature"></i></a>
+            </li>
+            <br />
+        </ul>
+    </div>
+    <div class="footer">
+        <br>
+        <p class="cpright">&copy;
+            <script>
+                document.write(new Date().getFullYear())
+            </script> by Annanya Pandey</p>
+    </div>
+</body>
+
 </html>
